python_ffi/lotrc.h

typedef struct AlignedBuf {
  struct slice_AlignmentHelper data;
  uintptr_t size;
} AlignedBuf;
typedef struct ref_slice_u8 {
  uint64_t align;
  uint8_t pad[8];
} ref_slice_u8;
typedef struct CompressedDataRef {
  struct ref_slice_u8 data;
  struct AlignedBuf data_decomp;
} CompressedDataRef;
typedef struct slice_string {
  uint64_t align;
  uint8_t pad[8];
} slice_string;
typedef struct IndexMap_u32__ref_slice_u8 {
  uint64_t align;
  uint8_t pad[64];
} IndexMap_u32__ref_slice_u8;
typedef struct ref_slice_CompressedDataRef {
  uint64_t align;
  uint8_t pad[8];
} ref_slice_CompressedDataRef;
typedef struct IndexMap_u32_______CompressedDataRef {
  uint64_t align;
  uint8_t pad[64];
} IndexMap_u32_______CompressedDataRef;
typedef uint32_t u32_be;
typedef uint16_t u16_be;
typedef u32_be u32Ps3;
typedef struct PakHeaderPs3 {
  u32Ps3 block_a_num;
  u32Ps3 block_a_offset;
  u32Ps3 constx13;
  u32Ps3 version;
  u32Ps3 strings_offset;
  u32Ps3 strings_size;
  u32Ps3 strings_num;
  u32Ps3 block1_offset;
  u32Ps3 block1_size;
  u32Ps3 block1_size_comp;
  u32Ps3 sub_blocks1_offset;
  u32Ps3 block2_offset;
  u32Ps3 block2_size;
  u32Ps3 block2_size_comp;
  u32Ps3 sub_blocks2_offset;
  u32Ps3 string_keys_offset;
  u32Ps3 unk_16;
  u32Ps3 obja_size;
  u32Ps3 obj0_size;
  u32Ps3 model_info_size;
  u32Ps3 buffer_info_size;
  u32Ps3 mat1_size;
  u32Ps3 mat2_size;
  u32Ps3 mat3_size;
  u32Ps3 mat4_size;
  u32Ps3 mat_extra_size;
  u32Ps3 unk_26;
  u32Ps3 shape_info_size;
  u32Ps3 hk_shape_info_size;
  u32Ps3 hk_constraint_data_size;
  u32Ps3 vbuff_info_size;
  u32Ps3 ibuff_info_size;
  u32Ps3 texture_info_size;
  u32Ps3 animation_info_size;
  u32Ps3 hk_constraint_info_size;
  u32Ps3 effect_info_size;
  u32Ps3 pfield_info_size;
  u32Ps3 gfx_block_info_size;
  u32Ps3 animation_block_info_size;
  u32Ps3 foliage_info_size;
  u32Ps3 radiosity_vals_info_size;
  u32Ps3 unk_41;
  u32Ps3 obja_num;
  u32Ps3 obj0_num;
  u32Ps3 model_info_num;
  u32Ps3 buffer_info_num;
  u32Ps3 mat1_num;
  u32Ps3 mat2_num;
  u32Ps3 mat3_num;
  u32Ps3 mat4_num;
  u32Ps3 mat_extra_num;
  u32Ps3 unk_51;
  u32Ps3 shape_info_num;
  u32Ps3 hk_shape_info_num;
  u32Ps3 hk_constraint_data_num;
  u32Ps3 vbuff_info_num;
  u32Ps3 ibuff_info_num;
  u32Ps3 texture_info_num;
  u32Ps3 animation_info_num;
  u32Ps3 hk_constraint_info_num;
  u32Ps3 effect_info_num;
  u32Ps3 pfield_info_num;
  u32Ps3 gfx_block_info_num;
  u32Ps3 animation_block_info_num;
  u32Ps3 foliage_info_num;
  u32Ps3 radiosity_vals_info_num;
  u32Ps3 unk_66;
  u32Ps3 obja_offset;
  u32Ps3 obj0_offset;
  u32Ps3 model_info_offset;
  u32Ps3 buffer_info_offset;
  u32Ps3 mat1_offset;
  u32Ps3 mat2_offset;
  u32Ps3 mat3_offset;
  u32Ps3 mat4_offset;
  u32Ps3 mat_extra_offset;
  u32Ps3 unk_76;
  u32Ps3 shape_info_offset;
  u32Ps3 hk_shape_info_offset;
  u32Ps3 hk_constraint_data_offset;
  u32Ps3 vbuff_info_offset;
  u32Ps3 ibuff_info_offset;
  u32Ps3 texture_info_offset;
  u32Ps3 animation_info_offset;
  u32Ps3 hk_constraint_info_offset;
  u32Ps3 effect_info_offset;
  u32Ps3 pfield_info_offset;
  u32Ps3 gfx_block_info_offset;
  u32Ps3 animation_block_info_offset;
  u32Ps3 foliage_info_offset;
  u32Ps3 radiosity_vals_info_offset;
  u32Ps3 unk_91;
  u32Ps3 unk_92;
  u32Ps3 unk_93;
  u32Ps3 unk_94;
  u32Ps3 unk_95;
  u32Ps3 unk_96;
  u32Ps3 unk_97;
  u32Ps3 unk_98;
  u32Ps3 unk_99;
  u32Ps3 unk_100;
  u32Ps3 unk_101;
  u32Ps3 unk_102;
  u32Ps3 unk_103;
  u32Ps3 unk_104;
  u32Ps3 unk_105;
  u32Ps3 unk_106;
  u32Ps3 unk_107;
  u32Ps3 unk_108;
  u32Ps3 unk_109;
  u32Ps3 unk_110;
  u32Ps3 unk_111;
  u32Ps3 unk_112;
  u32Ps3 unk_113;
  u32Ps3 unk_114;
  u32Ps3 unk_115;
  u32Ps3 block2_offsets_num;
  u32Ps3 block2_offsets_offset;
} PakHeaderPs3;
typedef struct slice_string StringsRefPs3;
typedef struct ref_slice_ObjAPs3 {
  uint64_t align;
  uint8_t pad[8];
} ref_slice_ObjAPs3;
typedef struct ref_slice_Obj0Ps3 {
  uint64_t align;
  uint8_t pad[8];
} ref_slice_Obj0Ps3;
typedef struct ref_slice_ModelInfoPs3 {
  uint64_t align;
  uint8_t pad[8];
} ref_slice_ModelInfoPs3;
typedef struct ref_slice_BufferInfoPs3 {
  uint64_t align;
  uint8_t pad[8];
} ref_slice_BufferInfoPs3;
typedef struct ref_slice_Mat1Ps3 {
  uint64_t align;
  uint8_t pad[8];
} ref_slice_Mat1Ps3;
typedef struct ref_slice_Mat2Ps3 {
  uint64_t align;
  uint8_t pad[8];
} ref_slice_Mat2Ps3;
typedef struct ref_slice_Mat3Ps3 {
  uint64_t align;
  uint8_t pad[8];
} ref_slice_Mat3Ps3;
typedef struct ref_slice_Mat4Ps3 {
  uint64_t align;
  uint8_t pad[8];
} ref_slice_Mat4Ps3;
typedef struct ref_slice_MatExtraPs3 {
  uint64_t align;
  uint8_t pad[8];
} ref_slice_MatExtraPs3;
typedef struct ref_slice_ShapeInfoPs3 {
  uint64_t align;
  uint8_t pad[8];
} ref_slice_ShapeInfoPs3;
typedef struct ref_slice_HkShapeInfoPs3 {
  uint64_t align;
  uint8_t pad[8];
} ref_slice_HkShapeInfoPs3;
typedef struct ref_slice_HkConstraintDataPs3 {
  uint64_t align;
  uint8_t pad[8];
} ref_slice_HkConstraintDataPs3;
typedef struct ref_slice_VBuffInfoPs3 {
  uint64_t align;
  uint8_t pad[8];
} ref_slice_VBuffInfoPs3;
typedef struct ref_slice_IBuffInfoPs3 {
  uint64_t align;
  uint8_t pad[8];
} ref_slice_IBuffInfoPs3;
typedef struct ref_slice_TextureInfoPs3 {
  uint64_t align;
  uint8_t pad[8];
} ref_slice_TextureInfoPs3;
typedef struct ref_slice_AnimationInfoPs3 {
  uint64_t align;
  uint8_t pad[8];
} ref_slice_AnimationInfoPs3;
typedef struct ref_slice_HkConstraintInfoPs3 {
  uint64_t align;
  uint8_t pad[8];
} ref_slice_HkConstraintInfoPs3;
typedef struct ref_slice_EffectInfoPs3 {
  uint64_t align;
  uint8_t pad[8];
} ref_slice_EffectInfoPs3;
typedef struct ref_slice_PFieldInfoPs3 {
  uint64_t align;
  uint8_t pad[8];
} ref_slice_PFieldInfoPs3;
typedef struct ref_slice_GFXBlockInfoPs3 {
  uint64_t align;
  uint8_t pad[8];
} ref_slice_GFXBlockInfoPs3;
typedef struct ref_slice_AnimationBlockInfoPs3 {
  uint64_t align;
  uint8_t pad[8];
} ref_slice_AnimationBlockInfoPs3;
typedef struct ref_slice_FoliageInfoPs3 {
  uint64_t align;
  uint8_t pad[8];
} ref_slice_FoliageInfoPs3;
typedef struct ref_slice_RadiosityValsInfoPs3 {
  uint64_t align;
  uint8_t pad[8];
} ref_slice_RadiosityValsInfoPs3;
typedef struct InfosRefPs3 {
  struct ref_slice_ObjAPs3 objas;
  struct ref_slice_Obj0Ps3 obj0s;
  struct ref_slice_ModelInfoPs3 models;
  struct ref_slice_BufferInfoPs3 buffers;
  struct ref_slice_Mat1Ps3 mat1s;
  struct ref_slice_Mat2Ps3 mat2s;
  struct ref_slice_Mat3Ps3 mat3s;
  struct ref_slice_Mat4Ps3 mat4s;
  struct ref_slice_MatExtraPs3 mat_extras;
  struct ref_slice_ShapeInfoPs3 shapes;
  struct ref_slice_HkShapeInfoPs3 hk_shapes;
  struct ref_slice_HkConstraintDataPs3 hk_constraint_datas;
  struct ref_slice_VBuffInfoPs3 vbuffs;
  struct ref_slice_IBuffInfoPs3 ibuffs;
  struct ref_slice_TextureInfoPs3 textures;
  struct ref_slice_AnimationInfoPs3 animations;
  struct ref_slice_HkConstraintInfoPs3 hk_constraints;
  struct ref_slice_EffectInfoPs3 effects;
  struct ref_slice_PFieldInfoPs3 pfields;
  struct ref_slice_GFXBlockInfoPs3 gfxs;
  struct ref_slice_AnimationBlockInfoPs3 animation_blocks;
  struct ref_slice_FoliageInfoPs3 foliages;
  struct ref_slice_RadiosityValsInfoPs3 radiosity_vals;
} InfosRefPs3;
typedef struct IndexMap_u32__TextureRefPs3 {
  uint64_t align;
  uint8_t pad[64];
} IndexMap_u32__TextureRefPs3;
typedef struct IndexMap_u32__ModelRefPs3 {
  uint64_t align;
  uint8_t pad[64];
} IndexMap_u32__ModelRefPs3;
typedef struct IndexMap_u32__EffectRefPs3 {
  uint64_t align;
  uint8_t pad[64];
} IndexMap_u32__EffectRefPs3;
typedef struct IndexMap_u32__slice_FoliageRefPs3 {
  uint64_t align;
  uint8_t pad[64];
} IndexMap_u32__slice_FoliageRefPs3;
typedef struct IndexMap_u32__RadiosityValsRefPs3 {
  uint64_t align;
  uint8_t pad[64];
} IndexMap_u32__RadiosityValsRefPs3;
typedef struct RadiosityRefPs3 {
  const struct CompressedDataRef *data;
  struct IndexMap_u32__RadiosityValsRefPs3 vals;
  uint32_t usage;
} RadiosityRefPs3;
typedef struct ObjsRefPs3 {
  struct IndexMap_u32__TextureRefPs3 textures;
  struct IndexMap_u32__ModelRefPs3 models;
  struct IndexMap_u32__EffectRefPs3 effects;
  struct IndexMap_u32__slice_FoliageRefPs3 foliages;
  struct IndexMap_u32__ref_slice_u8 gfxs;
  struct RadiosityRefPs3 radiosity;
} ObjsRefPs3;
typedef struct SubBlocksHeaderPs3 {
  u32Ps3 z0;
  u32Ps3 block_num;
  u32Ps3 z2;
  u32Ps3 z3;
} SubBlocksHeaderPs3;
typedef struct ref_slice_SubBlocksBlockHeaderPs3 {
  uint64_t align;
  uint8_t pad[8];
} ref_slice_SubBlocksBlockHeaderPs3;
typedef struct SubBlocksInfoRefPs3 {
  const struct SubBlocksHeaderPs3 *header;
  struct ref_slice_SubBlocksBlockHeaderPs3 block_headers;
} SubBlocksInfoRefPs3;
typedef struct IndexMap_u32__DataRefPs3 {
  uint64_t align;
  uint8_t pad[64];
} IndexMap_u32__DataRefPs3;
typedef struct IndexMap_u32__LuaRefPs3 {
  uint64_t align;
  uint8_t pad[64];
} IndexMap_u32__LuaRefPs3;
typedef struct IndexMap_u32__SSARefPs3 {
  uint64_t align;
  uint8_t pad[64];
} IndexMap_u32__SSARefPs3;
typedef struct Option_AtlasUVRefPs3 {
  uint64_t align;
  uint8_t pad[8];
} Option_AtlasUVRefPs3;
typedef struct GameObjsHeaderPs3 {
  u32Ps3 const_;
  u32Ps3 types_num;
  u32Ps3 types_offset;
  u32Ps3 obj_num;
  u32Ps3 obj_offset;
  u32Ps3 z5;
  u32Ps3 z6;
  u32Ps3 z7;
} GameObjsHeaderPs3;
typedef struct IndexMap_u32__TypeRefPs3 {
  uint64_t align;
  uint8_t pad[64];
} IndexMap_u32__TypeRefPs3;
typedef struct IndexMap_u32__ObjRefPs3 {
  uint64_t align;
  uint8_t pad[64];
} IndexMap_u32__ObjRefPs3;
typedef struct GameObjsRefPs3 {
  const struct GameObjsHeaderPs3 *header;
  struct IndexMap_u32__TypeRefPs3 types;
  struct IndexMap_u32__ObjRefPs3 objs;
} GameObjsRefPs3;
typedef struct SubBlocks1RefPs3 {
  struct SubBlocksInfoRefPs3 info;
  struct IndexMap_u32__DataRefPs3 files;
  struct IndexMap_u32__LuaRefPs3 lua;
  struct IndexMap_u32__SSARefPs3 subtitles;
  struct Option_AtlasUVRefPs3 atlas1;
  struct Option_AtlasUVRefPs3 atlas2;
  struct GameObjsRefPs3 level;
} SubBlocks1RefPs3;
typedef u16_be u16Ps3;
typedef struct StringKeysHeaderPs3 {
  u16Ps3 num_a;
  u16Ps3 num_b;
  u32Ps3 z2;
  u32Ps3 z3;
  u32Ps3 z4;
  u32Ps3 z5;
} StringKeysHeaderPs3;
typedef struct ref_slice_StringKeysValPs3 {
  uint64_t align;
  uint8_t pad[8];
} ref_slice_StringKeysValPs3;
typedef struct ref_slice_u32Ps3 {
  uint64_t align;
  uint8_t pad[8];
} ref_slice_u32Ps3;
typedef struct StringKeysRefPs3 {
  const struct StringKeysHeaderPs3 *header;
  struct ref_slice_StringKeysValPs3 vals;
  struct ref_slice_u32Ps3 pad;
} StringKeysRefPs3;
typedef struct Block1RefPs3 {
  struct InfosRefPs3 infos;
  struct ObjsRefPs3 objs;
  struct SubBlocks1RefPs3 sub_blocks;
  struct StringKeysRefPs3 string_keys;
} Block1RefPs3;
typedef struct Option_SprayRefPs3 {
  uint64_t align;
  uint8_t pad[24];
} Option_SprayRefPs3;
typedef struct Option_CrowdRefPs3 {
  uint64_t align;
  uint8_t pad[32];
} Option_CrowdRefPs3;
typedef struct Option_PFieldsRefPs3 {
  uint64_t align;
  uint8_t pad[8];
} Option_PFieldsRefPs3;
typedef struct IndexMap_u32__LangStringsRefPs3 {
  uint64_t align;
  uint8_t pad[64];
} IndexMap_u32__LangStringsRefPs3;
typedef struct SubBlocks2RefPs3 {
  struct SubBlocksInfoRefPs3 info;
  struct Option_SprayRefPs3 spray;
  struct Option_CrowdRefPs3 crowd;
  struct Option_PFieldsRefPs3 pfields;
  struct IndexMap_u32__LangStringsRefPs3 langs;
  struct IndexMap_u32__DataRefPs3 files;
} SubBlocks2RefPs3;
typedef struct Block2RefPs3 {
  struct SubBlocks2RefPs3 sub_blocks;
  struct ref_slice_u32Ps3 offsets;
} Block2RefPs3;
typedef struct IndexMap_u32__AnimationRefPs3 {
  uint64_t align;
  uint8_t pad[64];
} IndexMap_u32__AnimationRefPs3;
typedef struct AnimationsRefPs3 {
  struct IndexMap_u32__AnimationRefPs3 animations;
  struct ref_slice_AnimationBlockInfoPs3 block_infos;
} AnimationsRefPs3;
typedef struct ref_slice_BlockAValPs3 {
  uint64_t align;
  uint8_t pad[8];
} ref_slice_BlockAValPs3;
typedef struct PakRefPs3 {
  const struct PakHeaderPs3 *header;
  StringsRefPs3 strings;
  struct Block1RefPs3 block1;
  struct Block2RefPs3 block2;
  struct AnimationsRefPs3 animations;
  struct ref_slice_BlockAValPs3 vals_a;
  struct ref_slice_CompressedDataRef animation_data;
} PakRefPs3;
typedef struct BinHeaderPs3 {
  u32Ps3 constx06;
  u32Ps3 version;
  u32Ps3 strings_offset;
  u32Ps3 strings_size;
  u32Ps3 strings_num;
  u32Ps3 asset_handle_num;
  u32Ps3 asset_handle_offset;
  u32Ps3 unk_7;
  u32Ps3 vdata_num;
  u32Ps3 vdata_num_alt;
  u32Ps3 texdata_num;
  u32Ps3 unk_11;
  u32Ps3 unk_12;
  u32Ps3 unk_13;
  u32Ps3 unk_14;
  u32Ps3 unk_15;
  u32Ps3 unk_16;
  u32Ps3 unk_17;
  u32Ps3 unk_18;
  u32Ps3 unk_19;
  u32Ps3 unk_20;
  u32Ps3 unk_21;
  u32Ps3 unk_22;
  u32Ps3 unk_23;
  u32Ps3 unk_24;
  u32Ps3 unk_25;
  u32Ps3 unk_26;
  u32Ps3 unk_27;
  u32Ps3 unk_28;
  u32Ps3 unk_29;
  u32Ps3 unk_30;
  u32Ps3 unk_31;
  u32Ps3 unk_32;
  u32Ps3 unk_33;
  u32Ps3 unk_34;
  u32Ps3 unk_35;
  u32Ps3 unk_36;
  u32Ps3 unk_37;
  u32Ps3 unk_38;
  u32Ps3 unk_39;
  u32Ps3 unk_40;
  u32Ps3 unk_41;
  u32Ps3 unk_42;
} BinHeaderPs3;
typedef struct ref_slice_AssetHandlePs3 {
  uint64_t align;
  uint8_t pad[8];
} ref_slice_AssetHandlePs3;
typedef struct BinRefPs3 {
  const struct BinHeaderPs3 *header;
  StringsRefPs3 strings;
  struct ref_slice_AssetHandlePs3 asset_handles;
  struct IndexMap_u32_______CompressedDataRef model_data;
  struct IndexMap_u32_______CompressedDataRef texture_data;
} BinRefPs3;
typedef struct LevelRefPs3 {
  struct PakRefPs3 pak;
  struct BinRefPs3 bin;
} LevelRefPs3;
typedef struct InfoCounts {
  uintptr_t objas;
  uintptr_t obj0s;
  uintptr_t models;
  uintptr_t buffers;
  uintptr_t mat1s;
  uintptr_t mat2s;
  uintptr_t mat3s;
  uintptr_t mat4s;
  uintptr_t mat_extras;
  uintptr_t shapes;
  uintptr_t hk_shapes;
  uintptr_t hk_constraint_datas;
  uintptr_t vbuffs;
  uintptr_t ibuffs;
  uintptr_t textures;
  uintptr_t animations;
  uintptr_t hk_constraints;
  uintptr_t effects;
  uintptr_t pfields;
  uintptr_t gfxs;
  uintptr_t animation_blocks;
  uintptr_t foliages;
  uintptr_t radiosity_vals;
  uintptr_t offsets;
} InfoCounts;
typedef struct mut_slice_ObjAPc {
  uint64_t align;
  uint8_t pad[8];
} mut_slice_ObjAPc;