python_ffi/lotrc_rs.pxd


  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct ref_slice_TextureInfoPs3:
    uint64_t align;
    uint8_t pad[8];

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct ref_slice_AnimationInfoPs3:
    uint64_t align;
    uint8_t pad[8];

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct ref_slice_HkConstraintInfoPs3:
    uint64_t align;
    uint8_t pad[8];

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct ref_slice_EffectInfoPs3:
    uint64_t align;
    uint8_t pad[8];

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct ref_slice_PFieldInfoPs3:
    uint64_t align;
    uint8_t pad[8];

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct ref_slice_GFXBlockInfoPs3:
    uint64_t align;
    uint8_t pad[8];

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct ref_slice_AnimationBlockInfoPs3:
    uint64_t align;
    uint8_t pad[8];

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct ref_slice_FoliageInfoPs3:
    uint64_t align;
    uint8_t pad[8];

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct ref_slice_RadiosityValsInfoPs3:
    uint64_t align;
    uint8_t pad[8];

  cdef struct InfosRefPs3:
    ref_slice_ObjAPs3 objas;
    ref_slice_Obj0Ps3 obj0s;
    ref_slice_ModelInfoPs3 models;
    ref_slice_BufferInfoPs3 buffers;
    ref_slice_Mat1Ps3 mat1s;
    ref_slice_Mat2Ps3 mat2s;
    ref_slice_Mat3Ps3 mat3s;
    ref_slice_Mat4Ps3 mat4s;
    ref_slice_MatExtraPs3 mat_extras;
    ref_slice_ShapeInfoPs3 shapes;
    ref_slice_HkShapeInfoPs3 hk_shapes;
    ref_slice_HkConstraintDataPs3 hk_constraint_datas;
    ref_slice_VBuffInfoPs3 vbuffs;
    ref_slice_IBuffInfoPs3 ibuffs;
    ref_slice_TextureInfoPs3 textures;
    ref_slice_AnimationInfoPs3 animations;
    ref_slice_HkConstraintInfoPs3 hk_constraints;
    ref_slice_EffectInfoPs3 effects;
    ref_slice_PFieldInfoPs3 pfields;
    ref_slice_GFXBlockInfoPs3 gfxs;
    ref_slice_AnimationBlockInfoPs3 animation_blocks;
    ref_slice_FoliageInfoPs3 foliages;
    ref_slice_RadiosityValsInfoPs3 radiosity_vals;

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct IndexMap_u32__TextureRefPs3:
    uint64_t align;
    uint8_t pad[64];

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct IndexMap_u32__ModelRefPs3:
    uint64_t align;
    uint8_t pad[64];

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct IndexMap_u32__EffectRefPs3:
    uint64_t align;
    uint8_t pad[64];

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct IndexMap_u32__slice_FoliageRefPs3:
    uint64_t align;
    uint8_t pad[64];

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct IndexMap_u32__RadiosityValsRefPs3:
    uint64_t align;
    uint8_t pad[64];

  cdef struct RadiosityRefPs3:
    const CompressedDataRef *data;
    IndexMap_u32__RadiosityValsRefPs3 vals;
    uint32_t usage;

  cdef struct ObjsRefPs3:
    IndexMap_u32__TextureRefPs3 textures;
    IndexMap_u32__ModelRefPs3 models;
    IndexMap_u32__EffectRefPs3 effects;
    IndexMap_u32__slice_FoliageRefPs3 foliages;
    IndexMap_u32__ref_slice_u8 gfxs;
    RadiosityRefPs3 radiosity;

  #gen_ffi:export
  cdef struct SubBlocksHeaderPs3:
    u32Ps3 z0;
    u32Ps3 block_num;
    u32Ps3 z2;
    u32Ps3 z3;

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct ref_slice_SubBlocksBlockHeaderPs3:
    uint64_t align;
    uint8_t pad[8];

  cdef struct SubBlocksInfoRefPs3:
    const SubBlocksHeaderPs3 *header;
    ref_slice_SubBlocksBlockHeaderPs3 block_headers;

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct IndexMap_u32__DataRefPs3:
    uint64_t align;
    uint8_t pad[64];

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct IndexMap_u32__LuaRefPs3:
    uint64_t align;
    uint8_t pad[64];

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct IndexMap_u32__SSARefPs3:
    uint64_t align;
    uint8_t pad[64];

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct Option_AtlasUVRefPs3:
    uint64_t align;
    uint8_t pad[8];

  #gen_ffi:export
  cdef struct GameObjsHeaderPs3:
    u32Ps3 const_;
    u32Ps3 types_num;
    u32Ps3 types_offset;
    u32Ps3 obj_num;
    u32Ps3 obj_offset;
    u32Ps3 z5;
    u32Ps3 z6;
    u32Ps3 z7;

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct IndexMap_u32__TypeRefPs3:
    uint64_t align;
    uint8_t pad[64];

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct IndexMap_u32__ObjRefPs3:
    uint64_t align;
    uint8_t pad[64];

  cdef struct GameObjsRefPs3:
    const GameObjsHeaderPs3 *header;
    IndexMap_u32__TypeRefPs3 types;
    IndexMap_u32__ObjRefPs3 objs;

  cdef struct SubBlocks1RefPs3:
    SubBlocksInfoRefPs3 info;
    IndexMap_u32__DataRefPs3 files;
    IndexMap_u32__LuaRefPs3 lua;
    IndexMap_u32__SSARefPs3 subtitles;
    Option_AtlasUVRefPs3 atlas1;
    Option_AtlasUVRefPs3 atlas2;
    GameObjsRefPs3 level;

  ctypedef u16_be u16Ps3;

  #gen_ffi:export
  cdef struct StringKeysHeaderPs3:
    u16Ps3 num_a;
    u16Ps3 num_b;
    u32Ps3 z2;
    u32Ps3 z3;
    u32Ps3 z4;
    u32Ps3 z5;

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct ref_slice_StringKeysValPs3:
    uint64_t align;
    uint8_t pad[8];

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct ref_slice_u32Ps3:
    uint64_t align;
    uint8_t pad[8];

  cdef struct StringKeysRefPs3:
    const StringKeysHeaderPs3 *header;
    ref_slice_StringKeysValPs3 vals;
    ref_slice_u32Ps3 pad;

  cdef struct Block1RefPs3:
    InfosRefPs3 infos;
    ObjsRefPs3 objs;
    SubBlocks1RefPs3 sub_blocks;
    StringKeysRefPs3 string_keys;

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct Option_SprayRefPs3:
    uint64_t align;
    uint8_t pad[24];

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct Option_CrowdRefPs3:
    uint64_t align;
    uint8_t pad[32];

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct Option_PFieldsRefPs3:
    uint64_t align;
    uint8_t pad[8];

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct IndexMap_u32__LangStringsRefPs3:
    uint64_t align;
    uint8_t pad[64];

  cdef struct SubBlocks2RefPs3:
    SubBlocksInfoRefPs3 info;
    Option_SprayRefPs3 spray;
    Option_CrowdRefPs3 crowd;
    Option_PFieldsRefPs3 pfields;
    IndexMap_u32__LangStringsRefPs3 langs;
    IndexMap_u32__DataRefPs3 files;

  cdef struct Block2RefPs3:
    SubBlocks2RefPs3 sub_blocks;
    ref_slice_u32Ps3 offsets;

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct IndexMap_u32__AnimationRefPs3:
    uint64_t align;
    uint8_t pad[64];

  cdef struct AnimationsRefPs3:
    IndexMap_u32__AnimationRefPs3 animations;
    ref_slice_AnimationBlockInfoPs3 block_infos;

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct ref_slice_BlockAValPs3:
    uint64_t align;
    uint8_t pad[8];

  cdef struct PakRefPs3:
    const PakHeaderPs3 *header;
    StringsRefPs3 strings;
    Block1RefPs3 block1;
    Block2RefPs3 block2;
    AnimationsRefPs3 animations;
    ref_slice_BlockAValPs3 vals_a;
    ref_slice_CompressedDataRef animation_data;

  #gen_ffi:export
  cdef struct BinHeaderPs3:
    u32Ps3 constx06;
    u32Ps3 version;
    u32Ps3 strings_offset;
    u32Ps3 strings_size;
    u32Ps3 strings_num;
    u32Ps3 asset_handle_num;
    u32Ps3 asset_handle_offset;
    u32Ps3 unk_7;
    u32Ps3 vdata_num;
    u32Ps3 vdata_num_alt;
    u32Ps3 texdata_num;
    u32Ps3 unk_11;
    u32Ps3 unk_12;
    u32Ps3 unk_13;
    u32Ps3 unk_14;
    u32Ps3 unk_15;
    u32Ps3 unk_16;
    u32Ps3 unk_17;
    u32Ps3 unk_18;
    u32Ps3 unk_19;
    u32Ps3 unk_20;
    u32Ps3 unk_21;
    u32Ps3 unk_22;
    u32Ps3 unk_23;
    u32Ps3 unk_24;
    u32Ps3 unk_25;
    u32Ps3 unk_26;
    u32Ps3 unk_27;
    u32Ps3 unk_28;
    u32Ps3 unk_29;
    u32Ps3 unk_30;
    u32Ps3 unk_31;
    u32Ps3 unk_32;
    u32Ps3 unk_33;
    u32Ps3 unk_34;
    u32Ps3 unk_35;
    u32Ps3 unk_36;
    u32Ps3 unk_37;
    u32Ps3 unk_38;
    u32Ps3 unk_39;
    u32Ps3 unk_40;
    u32Ps3 unk_41;
    u32Ps3 unk_42;

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct ref_slice_AssetHandlePs3:
    uint64_t align;
    uint8_t pad[8];

  cdef struct BinRefPs3:
    const BinHeaderPs3 *header;
    StringsRefPs3 strings;
    ref_slice_AssetHandlePs3 asset_handles;
    IndexMap_u32_______CompressedDataRef model_data;
    IndexMap_u32_______CompressedDataRef texture_data;

  cdef struct LevelRefPs3:
    PakRefPs3 pak;
    BinRefPs3 bin;

  cdef struct InfoCounts:
    uintptr_t objas;
    uintptr_t obj0s;
    uintptr_t models;
    uintptr_t buffers;
    uintptr_t mat1s;
    uintptr_t mat2s;
    uintptr_t mat3s;
    uintptr_t mat4s;
    uintptr_t mat_extras;
    uintptr_t shapes;
    uintptr_t hk_shapes;
    uintptr_t hk_constraint_datas;
    uintptr_t vbuffs;
    uintptr_t ibuffs;
    uintptr_t textures;
    uintptr_t animations;
    uintptr_t hk_constraints;
    uintptr_t effects;
    uintptr_t pfields;
    uintptr_t gfxs;
    uintptr_t animation_blocks;
    uintptr_t foliages;
    uintptr_t radiosity_vals;
    uintptr_t offsets;

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct mut_slice_ObjAPc:
    uint64_t align;
    uint8_t pad[8];
